<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wenxin_hint"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wenxin_hint_hs"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/gain_root_btn"
            android:layout_width="100dip"
            android:layout_height="40dip"
            android:layout_marginRight="5.0dip"
            android:background="@drawable/btn_blue_selector"
            android:text="@string/recycle"
            android:textColor="@color/white"
            android:textSize="16sp" 
            android:layout_gravity="center|right"/>
    </LinearLayout>

</LinearLayout>