<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/prompt_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_weight="5.50"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/delete_hint"
        android:textColor="@color/file_name_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/test_view"
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@color/file_delete_divider_color" />
    
    <TextView
        android:id="@+id/hint_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.0dip"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/delete_hint_music"
        android:textColor="#383838"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hint_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25.0dip"
        android:layout_marginTop="25.0dip"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/icon_file_warning"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/delete_hint_warning"
        android:textColor="@color/file_delete_warning"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delethit_dialog_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_file_manager_dialog_delete"
            android:text="@string/delete_hint_cancel"
            android:textColor="@color/file_name_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/delethit_dialog_goon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:background="@drawable/btn_file_manager_dialog_delete"
            android:text="@string/delete_hint_confirm"
            android:textColor="@color/file_name_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>