<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/prompt_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_weight="5.50"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/download_hint"
        android:textColor="@color/dialog_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/test_view"
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#D5D6D7" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25.0dip"
        android:layout_marginTop="25.0dip"
        android:gravity="center"
        android:text="@string/download_hint_is"
        android:textColor="#383838"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/downloadhit_dialog_cancle"
            android:layout_width="130dip"
            android:layout_height="38dp"
            android:layout_marginRight="10dip"
            android:background="@drawable/homefeature_btn_selector"
            android:text="@string/download_hint_cancle"
            android:textColor="#FF323232"
            android:textSize="18sp" />

        <Button
            android:id="@+id/downloadhit_dialog_goon"
            android:layout_width="130dip"
            android:layout_height="38dp"
            android:layout_marginLeft="10dip"
            android:background="@drawable/btn_copy_selector"
            android:text="@string/download_hint_goon"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>