<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/header_main_drawer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="15dp" >

            <EditText
                android:id="@+id/feedback_et"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:background="@drawable/intro_bg"
                android:padding="10dp"
                android:gravity="top"
                android:hint="@string/hint_feedback"
                android:maxLength="300"
                android:textColor="@color/black"
                android:textColorHint="#aaaaaa"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/intro_bg"
                android:gravity="center_vertical"
                android:hint="@string/mail_feedback"
                android:paddingLeft="10dp"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#aaaaaa"
                android:textSize="16sp"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="38dip"
                android:layout_marginTop="16.0dip"
                android:background="@drawable/btn_publish_selector"
                android:text="发　表"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/personal_login_line_heng" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/feedback_text1"
                android:textColor="@color/left_menu_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/feedback_text2"
                android:textColor="@color/left_menu_text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                     android:background="@drawable/feedback_kuang">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dip"
                        android:text="@string/feedback_group"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:textColor="@color/gary_eight"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/feedback_num"
                        android:layout_width="wrap_content"
                        android:layout_height="32dip"
                        android:text="@string/feedback_group_num"
                        android:gravity="center_vertical"
                        android:textColor="#669900"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/feedback_copy"
                    android:layout_width="70dip"
                    android:layout_height="32dip"
                    android:background="@drawable/btn_copy_selector"
                    android:text="@string/feedback_copy_num"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>