<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="220dip"
        android:layout_height="210dip"
        android:src="@drawable/v2_loading_fail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:text="@string/load_fail"
        android:textColor="#919191"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dip"
        android:orientation="horizontal" 
        android:gravity="center">

        <Button
            android:id="@+id/back_index"
            android:layout_width="120dip"
            android:layout_height="38dp"
            android:layout_marginRight="5dip"
            android:background="@drawable/btn_green_selector"
            android:text="@string/again_load"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/seting_network"
            android:layout_width="120dip"
            android:layout_height="38dp"
            android:layout_marginLeft="5dip"
            android:background="@drawable/btn_yellow_selector"
            android:text="@string/set_network"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>