<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/prompt_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5.50"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip"
        android:text="@string/update_hint"
        android:textColor="#383838"
        android:textSize="20dip" />

    <View
        android:id="@+id/test_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#D5D6D7" />

    <LinearLayout
        android:id="@+id/dialog_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="fill_parent"
            android:layout_height="67dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:text="@string/now_is_new"
            android:textColor="#383838"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:background="@drawable/btn_dialog_confirm_selector"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="20dip"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>