<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/prompt_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10dp"
        android:text="@string/switch_mode_title"
        android:textColor="@color/dialog_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/test_view"
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#D5D6D7" />

    <TextView
        android:id="@+id/dialog_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text=""
        android:textColor="#383838"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginRight="5dip"
            android:background="@drawable/homefeature_btn_selector"
            android:text="@string/switch_mode_switch"
            android:textColor="#FF323232"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dialog_update"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginLeft="24dip"
            android:background="@drawable/btn_copy_selector"
            android:text="@string/switch_mode_connect"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>